Simplify calls